# ppt-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_mcp_pptx.py
mcp_pptx_server/: __init__.py  __main__.py  formatting.py  presentation_editor.py  presentation_manager.py  presentation_reader.py  server.py  slide_builder.py
